@@ -1,3 +1,10 @@
+globus-gridftp-server (12.7-1+gt6.@distro@) @distro@; urgency=low
+
+  * force ipc encryption if server configuration requires
+  * fix old ipc bug making it hard to diagnose racy connection failures
+
+ -- Globus Toolkit <support@globus.org>  Fri, 13 Jul 2018 16:16:09 -0500
+
 globus-gridftp-server (12.6-1+gt6.@distro@) @distro@; urgency=low
 
   * win: fix path restrictions on /
